<resources>
    <string name="app_name">Yo Tani Serikat Kerja</string>


    <!-- pengaturan string untuk button-->
    <string name="login_button_login">Login</string>
    <string name="register_button_register">Register</string>
    <string name="forgot_button_send_email">Send Email</string>

    <!--pengaturan string untuk textview-->
    <string name="login_textview_username">Username</string>
    <string name="login_textview_password">Password</string>
    <string name="login_textview_register">Register Here</string>
    <string name="login_textview_forgot_password">Forgot Password</string>
    <string name="login_textview_email">E-mail</string>
    <string name="login_textview_retype_password">Confirm Password</string>
    <string name="login_textview_login">Login Now</string>

    <!--pengaturan string untuk hint-->
    <string name="login_hint_edittext_username">Insert your ID/username</string>
    <string name="login_hint_edittext_password">Insert your password</string>
    <string name="login_hint_edittext_email">Insert your email address</string>
    <string name="lofin_hint_edittext_confirm_password">Confirm your password</string>


    <!--TEMPLATE DASHBOARD ENTERPRISE    -->
    <!--pengaturan string untuk menu dashboard-->
    <string name="dash_menu1">Taxi</string>
    <string name="dash_menu2">Flights</string>
    <string name="dash_menu3">Train</string>
    <string name="dash_menu4">Hotel</string>
    <string name="dash_menu5">Navigation</string>
    <string name="dash_menu6">Events</string>
    <string name="dash_menu7">Message</string>
    <string name="dash_menu8">Settings</string>
    <string name="dash_menu9">Sign Out</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="pointof_title_dashboard">Lorem ipsum dolor sit amet</string>
    <string name="profilename">Josh Christ</string>
    <string name="button_editprofile">Edit Profile</string>
</resources>
