<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpage.register.RegisterActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="I already have account"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_registerpage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_login_registerpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/colorTheme"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/login_textview_login"
        android:textColor="@color/secondColorTheme"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_textview_email" />

        <EditText
            android:id="@+id/et_email_registerpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/login_hint_edittext_email"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_textview_username" />

        <EditText
            android:id="@+id/et_username_registerpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/login_hint_edittext_username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_textview_password" />

        <EditText
            android:id="@+id/et_password_registerpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/login_hint_edittext_password"
            android:inputType="textVisiblePassword|textPersonName"
            android:password="false"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lofin_hint_edittext_confirm_password" />

        <EditText
            android:id="@+id/et_confpassword_registerpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/lofin_hint_edittext_confirm_password"
            android:inputType="textVisiblePassword|textPersonName"
            android:password="false"
            android:singleLine="true" />

        <Button
            android:id="@+id/bt_register_registerpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_for_button_loginpage"
            android:text="@string/register_button_register"
            android:textAllCaps="false"
            android:textColor="@color/colorTheme"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
